{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 111,
  "lineage": "5f1743e0-c64e-7cdb-4e77-cbfc84282309",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "VPC_viaTerraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:139139346983:vpc/vpc-04a31992439a12af5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06717e9a09b5310a7",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-003daea5aaefcda1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a31992439a12af5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0acf7e169a7b8ddd1",
            "owner_id": "139139346983",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-viaTerraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a5b0d219e493191b",
            "arn": "arn:aws:ec2:eu-central-1:139139346983:instance/i-012c5efd93909de03",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012c5efd93909de03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-040fdf3f5d2a4324b"
              }
            ],
            "primary_network_interface_id": "eni-040fdf3f5d2a4324b",
            "private_dns": "ip-172-31-41-23.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.41.23",
            "public_dns": "ec2-63-178-44-134.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.178.44.134",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d7a7f78f686622fe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "SG-viaTerraform-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054a12f9792256fdc",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0926266fa987f8698"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "139139346983",
            "id": "i-012c5efd93909de03",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.SG_viaTerraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_SG_viaTerraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:139139346983:security-group/sg-04bc9d854b7be42f6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04bc9d854b7be42f6",
            "ingress": [],
            "name": "RDS-SG-viaTerraform-security-group",
            "name_prefix": "",
            "owner_id": "139139346983",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a31992439a12af5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "139139346983",
            "id": "sg-04bc9d854b7be42f6",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_viaTerraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:139139346983:security-group/sg-0926266fa987f8698",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0926266fa987f8698",
            "ingress": [],
            "name": "SG-viaTerraform-security-group",
            "name_prefix": "",
            "owner_id": "139139346983",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a31992439a12af5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "139139346983",
            "id": "sg-0926266fa987f8698",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_SSH_income",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2577267083",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-0926266fa987f8698",
            "security_group_rule_id": "sgr-063154a049805cb62",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG_viaTerraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3589398374",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-central-1",
            "security_group_id": "sg-0926266fa987f8698",
            "security_group_rule_id": "sgr-034caccd72384e892",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG_viaTerraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_custom_TCP_income",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5000,
            "id": "sgrule-261926809",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-0926266fa987f8698",
            "security_group_rule_id": "sgr-07a5de365d6cae047",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG_viaTerraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_income",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-790078526",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-0926266fa987f8698",
            "security_group_rule_id": "sgr-0fb7fed61f47a1034",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG_viaTerraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_income",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-912077161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-0926266fa987f8698",
            "security_group_rule_id": "sgr-088628a58dd219116",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG_viaTerraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_income_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.41.23/32"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-4036592033",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-04bc9d854b7be42f6",
            "security_group_rule_id": "sgr-0cfd50a2d7f0ad49d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.EC2-viaTerraform",
            "aws_security_group.RDS_SG_viaTerraform",
            "aws_security_group.SG_viaTerraform"
          ]
        }
      ]
    }
  ]
}